fixed spacing of round and score

--- a/src/client/trivia-game-ui/src/components/Gameplay/Game.css
+++ b/src/client/trivia-game-ui/src/components/Gameplay/Game.css
@@ -1,4 +1,4 @@
-/* this styling is from the quizbee app. needs to be updated for our puposes */
+
 * {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -9,11 +9,11 @@
   text-align: center;
 }
 
-.row {
-  font-weight: 600;
-}
 
-.container {
+
+
+/* this styling is from the quizbee app. needs to be updated or deleted for our puposes */
+/* .container {
   position: absolute;
   width: 1024px;
   height: 800px;
@@ -27,18 +27,18 @@
   left: 0px;
   right: 0px;
   margin: auto;
-}
+} */
 
-.title {
+/* .title {
   position: relative;
   background-color: rgba(0, 0, 0, 1);
   color: rgb(255, 255, 255);
   padding: 20px;
   font-size: 1.8em;
   border-radius: 5px;
-}
+} */
 
-.question {
+/* .question {
   font-size: 1.2em;
   font-weight: bold;
   margin-bottom: 5px;
@@ -94,4 +94,4 @@
   margin: auto;
   outline: none;
   cursor: pointer;
-}
+} */
